--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -25,6 +25,13 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>commons-logging</groupId>
+      <artifactId>commons-logging</artifactId>
+      <version>1.0.4</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
 </project>
