--- a/commons-spring/pom.xml
+++ b/commons-spring/pom.xml
@@ -1,38 +1,41 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+<?xml version="1.0"?><project>
   <parent>
     <artifactId>zauber-commons-parent</artifactId>
     <groupId>ar.com.zauber.commons</groupId>
     <version>1.0</version>
   </parent>
-  <packaging>jar</packaging>
+  <modelVersion>4.0.0</modelVersion>
   <artifactId>commons-spring</artifactId>
-  <version>1.0</version>
+  <version>1.1</version>
   <dependencies>
     <dependency>
-         <groupId>org.springframework</groupId>
-         <artifactId>spring-support</artifactId>
-         <version>1.2.6</version>
-         <exclusions>
-           <exclusion>
-              <groupId>javax.resource</groupId>
-               <artifactId>connector</artifactId>
-           </exclusion>
-           <exclusion>
-              <groupId>commons-dbcp</groupId>
-              <artifactId>commons-dbcp</artifactId>
-           </exclusion>
-           <exclusion>
-              <groupId>com.servlets</groupId>
-              <artifactId>cos</artifactId>
-           </exclusion>
-         </exclusions>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-support</artifactId>
+      <version>1.2.6</version>
+      <exclusions>
+        <exclusion>
+          <artifactId>connector</artifactId>
+          <groupId>javax.resource</groupId>
+        </exclusion>
+        <exclusion>
+          <artifactId>commons-dbcp</artifactId>
+          <groupId>commons-dbcp</groupId>
+        </exclusion>
+        <exclusion>
+          <artifactId>cos</artifactId>
+          <groupId>com.servlets</groupId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-webmvc</artifactId>
       <version>1.2.6</version>
     </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>3.8.1</version>
+    </dependency>
   </dependencies>
-
 </project>
