--- a/commons-spring/pom.xml
+++ b/commons-spring/pom.xml
@@ -6,7 +6,7 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>commons-spring</artifactId>
-  <version>1.1</version>
+  <version>1.2</version>
   <dependencies>
     <dependency>
       <groupId>org.springframework</groupId>
@@ -36,6 +36,11 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
+    </dependency>
+    <dependency>
+      <groupId>ar.com.zauber.commons</groupId>
+      <artifactId>commons</artifactId>
+      <version>1.1</version>
     </dependency>
   </dependencies>
 </project>
