--- a/auth/impl/pom.xml
+++ b/auth/impl/pom.xml
@@ -45,6 +45,11 @@
 	<artifactId>spring-webmvc</artifactId>
 	<version>1.2.6</version>
     </dependency>
-
+    <dependency>
+       <groupId>javax.servlet</groupId>
+       <artifactId>servlet-api</artifactId>
+       <version>2.4</version>
+    </dependency>
+ 
   </dependencies>
 </project>
