agrego el null message factory y hago un poco de refactor

--- a/message/impl/pom.xml
+++ b/message/impl/pom.xml
@@ -6,7 +6,8 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>commons-message-impl</artifactId>
-  <version>1.0</version>
+  <packaging>jar</packaging>
+  <version>1.1</version>
   <dependencies>
     <dependency>
       <groupId>ar.com.zauber.commons.message</groupId>
