--- a/auth/impl/pom.xml
+++ b/auth/impl/pom.xml
@@ -7,7 +7,7 @@
     <version>1.0</version>
   </parent>
   <artifactId>commons-auth-impl</artifactId>
-  <version>1.1</version>
+  <version>1.2</version>
   <packaging>jar</packaging>
   <dependencies>
     <dependency>
@@ -49,6 +49,7 @@
        <groupId>javax.servlet</groupId>
        <artifactId>servlet-api</artifactId>
        <version>2.4</version>
+       <scope>provided</scope>
     </dependency>
  
   </dependencies>
