--- a/pom.xml
+++ b/pom.xml
@@ -31,4 +31,20 @@
       <version>2.0</version>
     </dependency>
   </dependencies>
+  <build>
+   <plugins>
+     <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+        <executions>
+           <execution>
+             <phase>package</phase>
+             <goals>
+                <goal>jar</goal>
+             </goals>
+           </execution>
+        </executions>
+     </plugin>
+   </plugins>
+  </build>
 </project>
