--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -7,8 +7,14 @@
     <version>1.0</version>
   </parent>
   <artifactId>commons</artifactId>
-  <version>1.3</version>
+  <version>1.4</version>
   <dependencies>
+    <dependency>
+      <groupId>ar.com.zauber.commons</groupId>
+      <artifactId>commons-dao</artifactId>
+      <version>1.0</version>
+    </dependency>
+ 
     <dependency>
       <groupId>commons-lang</groupId>
       <artifactId>commons-lang</artifactId>
