--- a/commons-spring/pom.xml
+++ b/commons-spring/pom.xml
@@ -11,7 +11,7 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-support</artifactId>
-      <version>1.2.6</version>
+      <version>1.2.7</version>
       <exclusions>
         <exclusion>
           <artifactId>connector</artifactId>
@@ -30,12 +30,12 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-webmvc</artifactId>
-      <version>1.2.6</version>
+      <version>1.2.7</version>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
-      <artifactId>spring-webmvc</artifactId>
-      <version>1.2.6</version>
+      <artifactId>spring-jdbc</artifactId>
+      <version>1.2.7</version>
     </dependency>
     <dependency>
        <groupId>javax.servlet</groupId>
