--- a/message/impl/pom.xml
+++ b/message/impl/pom.xml
@@ -32,8 +32,13 @@
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
+      <artifactId>spring-core</artifactId>
+      <version>1.2.7</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
       <artifactId>spring-support</artifactId>
-      <version>1.2.6</version>
+      <version>1.2.7</version>
       <exclusions>
         <exclusion>
           <artifactId>ehcache</artifactId>
@@ -60,6 +65,11 @@
           <groupId>spring-jdbc</groupId>
         </exclusion>
       </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>javax.mail</groupId>
+      <artifactId>mail</artifactId>
+      <version>1.3.2</version>
     </dependency>
     <dependency>
       <groupId>velocity</groupId>
