--- a/image/impl/.project
+++ b/image/impl/.project
@@ -1,16 +1,20 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-  <name>commons-image-impl</name>
-  <comment/>
-  <projects>
-    <project>commons-image-api</project>
-  </projects>
-  <buildSpec>
-    <buildCommand>
-      <name>org.eclipse.jdt.core.javabuilder</name>
-      <arguments/>
-    </buildCommand>
-  </buildSpec>
-  <natures>
-    <nature>org.eclipse.jdt.core.javanature</nature>
-  </natures>
+	<name>commons-image-impl</name>
+	<comment></comment>
+	<projects>
+		<project>commons-image-api</project>
+	</projects>
+	<buildSpec>
+		<buildCommand>
+			<name>org.eclipse.jdt.core.javabuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
+	</buildSpec>
+	<natures>
+		<nature>org.eclipse.jem.workbench.JavaEMFNature</nature>
+		<nature>org.eclipse.jdt.core.javanature</nature>
+		<nature>org.eclipse.jem.beaninfo.BeanInfoNature</nature>
+	</natures>
 </projectDescription>
