nuevo paquete (y release) commons syndication donde van cosas reusables de sindicacion.
por ahora hay unas clases para sindicacion de otro sitio.

esto esta relacionado con el issue 22.

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,8 @@
      <module>auth</module>
      <module>message</module>
      <module>dao</module>
+     <module>image</module>
+     <module>syndication</module>
   </modules>
   <dependencies>
     <dependency>
