--- a/auth/impl/pom.xml
+++ b/auth/impl/pom.xml
@@ -7,7 +7,7 @@
     <version>1.1</version>
   </parent>
   <artifactId>commons-auth-impl</artifactId>
-  <version>1.4</version>
+  <version>1.5</version>
   <packaging>jar</packaging>
   <dependencies>
     <dependency>
@@ -15,6 +15,12 @@
   	<artifactId>commons-auth-api</artifactId> 
 	<version>1.1</version>
     </dependency>
+    <dependency>
+    	<groupId>ar.com.zauber.commons</groupId>
+  	<artifactId>commons</artifactId> 
+	<version>1.7</version>
+    </dependency>
+ 
    <dependency>
       <groupId>org.acegisecurity</groupId>
       <artifactId>acegi-security</artifactId>
