--- a/auth/impl/pom.xml
+++ b/auth/impl/pom.xml
@@ -25,6 +25,12 @@
       <groupId>org.acegisecurity</groupId>
       <artifactId>acegi-security</artifactId>
       <version>1.0.0-RC1</version>
+	  <exclusions>
+	    <exclusion>
+		   <groupId>org.springframework</groupId>
+		   <artifactId>spring-support</artifactId>
+	    </exclusion>	   
+	  </exclusions>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
