agrego el tag <name> para que quede mejor el progreso de maven. esto no cambia nada importante asi que no se debe generar una version por esto

--- a/auth/pom.xml
+++ b/auth/pom.xml
@@ -6,6 +6,7 @@
     <groupId>ar.com.zauber.commons</groupId>
     <version>1.1</version>
   </parent>
+  <name>Zauber::Commons::Auth</name>
   <artifactId>parent</artifactId>
   <groupId>ar.com.zauber.commons.auth</groupId>
   <version>1.1</version>
