--- a/auth/api/pom.xml
+++ b/auth/api/pom.xml
@@ -9,4 +9,5 @@
   <artifactId>commons-auth-api</artifactId>
   <version>1.1</version>
   <packaging>jar</packaging>
+  <name>Zauber::Commons::Auth::API</name>
 </project>
