--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -6,13 +6,13 @@
     <groupId>ar.com.zauber.commons</groupId>
     <version>1.1</version>
   </parent>
+  <name>Zauber::Commons::Lang Common</name>
   <artifactId>commons</artifactId>
   <version>1.7</version>
   <dependencies>
     <dependency>
       <groupId>ar.com.zauber.commons</groupId>
       <artifactId>commons-dao</artifactId>
-      <version>1.1</version>
     </dependency>
  
     <dependency>
