--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -10,5 +10,5 @@
   <artifactId>commons-dao</artifactId>
   <packaging>jar</packaging>
   <version>1.1</version>
-  <name>Zauber Commons: DAO</name>
+  <name>Zauber::Commons::DAO</name>
 </project>
