--- a/image/pom.xml
+++ b/image/pom.xml
@@ -6,6 +6,7 @@
     <groupId>ar.com.zauber.commons</groupId>
     <version>1.1</version>
   </parent>
+  <name>Zauber::Commons::Image</name>
   <artifactId>parent</artifactId>
   <groupId>ar.com.zauber.commons.image</groupId>
   <version>1.0</version>
