--- a/message/api/pom.xml
+++ b/message/api/pom.xml
@@ -6,5 +6,6 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>commons-message-api</artifactId>
+  <name>Zauber::Commons::Message::API</name>
   <version>1.1</version>
 </project>
