--- a/message/pom.xml
+++ b/message/pom.xml
@@ -6,11 +6,11 @@
      <groupId>ar.com.zauber.commons</groupId>
      <version>1.1</version>
   </parent>
+  <name>Zauber::Commons::Message</name>
   <groupId>ar.com.zauber.commons.message</groupId>
   <artifactId>parent</artifactId>
   <packaging>pom</packaging>
   <version>1.1</version>
-  <name>Zauber Commons: message</name>
   <modules>
      <module>api</module>
      <module>impl</module>
