--- a/syndication/pom.xml
+++ b/syndication/pom.xml
@@ -4,6 +4,7 @@
     <groupId>ar.com.zauber.commons</groupId>
     <version>1.1</version>
   </parent>
+  <name>Zauber::Commons::Syndication</name>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>commons-syndication</artifactId>
   <version>1.0</version>
