Soporte inicial spring2.
common-spring: Nuevo UrlHandlerMapping para sacarle todo el jugo la configuracion por convencion de spring2.

Version bump!!
   todos los proyectos pasaron a tener la version 2.0, y todos los
   proyectos pasaron a tener una version global (2.0). La forma
   de trabajar de antes (una version por proyecto) era pesada
   de manejar.

Todavia no se desplegara la version.

--- a/image/impl/pom.xml
+++ b/image/impl/pom.xml
@@ -4,16 +4,15 @@
   <parent>
     <artifactId>parent</artifactId>
     <groupId>ar.com.zauber.commons.image</groupId>
-    <version>1.0</version>
+    <version>2.0</version>
   </parent>
+  <name>Zauber::Commons::Image:Implementation</name>
   <artifactId>commons-image-impl</artifactId>
-  <version>1.2</version>
   <packaging>jar</packaging>
   <dependencies>
     <dependency>
-    	<groupId>ar.com.zauber.commons.image</groupId>
-  	<artifactId>commons-image-api</artifactId> 
-	<version>1.1</version>
+        <groupId>ar.com.zauber.commons.image</groupId>
+        <artifactId>commons-image-api</artifactId> 
     </dependency>
     <dependency>
       <groupId>org.codehaus.plexus</groupId>
