--- a/auth/impl/pom.xml
+++ b/auth/impl/pom.xml
@@ -4,58 +4,42 @@
   <parent>
     <artifactId>parent</artifactId>
     <groupId>ar.com.zauber.commons.auth</groupId>
-    <version>1.1</version>
+    <version>2.0</version>
   </parent>
+  <name>Zauber::Commons::Auth::Implementation</name>
   <artifactId>commons-auth-impl</artifactId>
-  <version>1.5</version>
   <packaging>jar</packaging>
   <dependencies>
     <dependency>
-    	<groupId>ar.com.zauber.commons.auth</groupId>
-  	<artifactId>commons-auth-api</artifactId> 
-	<version>1.1</version>
+        <groupId>ar.com.zauber.commons.auth</groupId>
+        <artifactId>commons-auth-api</artifactId> 
     </dependency>
     <dependency>
-    	<groupId>ar.com.zauber.commons</groupId>
-  	<artifactId>commons</artifactId> 
-	<version>1.7</version>
+        <groupId>ar.com.zauber.commons</groupId>
+        <artifactId>commons</artifactId> 
     </dependency>
- 
    <dependency>
       <groupId>org.acegisecurity</groupId>
       <artifactId>acegi-security</artifactId>
       <version>1.0.0-RC1</version>
-	  <exclusions>
-	    <exclusion>
-		   <groupId>org.springframework</groupId>
-		   <artifactId>spring-support</artifactId>
-	    </exclusion>	   
-	  </exclusions>
+      <exclusions>
+        <exclusion>
+           <groupId>org.springframework</groupId>
+           <artifactId>spring-support</artifactId>
+        </exclusion>       
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-dao</artifactId>
-      <version>1.2.7</version>
-      <exclusions>
-         <exclusion>
-	   <groupId>org.springframework</groupId>
-	   <artifactId>spring-beans</artifactId>
-	 </exclusion>
-         <exclusion>
-	   <groupId>org.springframework</groupId>
-	   <artifactId>spring-support</artifactId>
-	 </exclusion>
-      </exclusions>
     </dependency>
     <dependency>
-	<groupId>org.springframework</groupId>
-	<artifactId>spring-aop</artifactId>
-	<version>1.2.7</version>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-aop</artifactId>
     </dependency>
     <dependency>
-	<groupId>org.springframework</groupId>
-	<artifactId>spring-webmvc</artifactId>
-	<version>1.2.7</version>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-webmvc</artifactId>
     </dependency>
     <dependency>
        <groupId>javax.servlet</groupId>
@@ -63,6 +47,5 @@
        <version>2.4</version>
        <scope>provided</scope>
     </dependency>
- 
   </dependencies>
 </project>
