--- a/commons-spring/pom.xml
+++ b/commons-spring/pom.xml
@@ -2,40 +2,28 @@
   <parent>
     <artifactId>zauber-commons-parent</artifactId>
     <groupId>ar.com.zauber.commons</groupId>
-    <version>1.1</version>
+    <version>2.0</version>
   </parent>
+  <name>Zauber::Commons::Spring</name>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>commons-spring</artifactId>
-  <version>1.12</version>
   <dependencies>
     <dependency>
       <groupId>org.springframework</groupId>
+      <artifactId>spring-mock</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
       <artifactId>spring-support</artifactId>
-      <version>1.2.7</version>
-      <exclusions>
-        <exclusion>
-          <artifactId>connector</artifactId>
-          <groupId>javax.resource</groupId>
-        </exclusion>
-        <exclusion>
-          <artifactId>commons-dbcp</artifactId>
-          <groupId>commons-dbcp</groupId>
-        </exclusion>
-        <exclusion>
-          <artifactId>cos</artifactId>
-          <groupId>com.servlets</groupId>
-        </exclusion>
-      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-webmvc</artifactId>
-      <version>1.2.7</version>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-jdbc</artifactId>
-      <version>1.2.7</version>
     </dependency>
     <dependency>
        <groupId>javax.servlet</groupId>
@@ -50,7 +38,6 @@
     <dependency>
       <groupId>ar.com.zauber.commons</groupId>
       <artifactId>commons</artifactId>
-      <version>1.7</version>
     </dependency>
   </dependencies>
 </project>
