--- a/message/impl/pom.xml
+++ b/message/impl/pom.xml
@@ -2,17 +2,16 @@
   <parent>
     <artifactId>parent</artifactId>
     <groupId>ar.com.zauber.commons.message</groupId>
-    <version>1.1</version>
+    <version>2.0</version>
   </parent>
+  <name>Zauber::Commons::Message::Implementation</name>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>commons-message-impl</artifactId>
   <packaging>jar</packaging>
-  <version>1.3</version>
   <dependencies>
     <dependency>
       <groupId>ar.com.zauber.commons.message</groupId>
       <artifactId>commons-message-api</artifactId>
-      <version>1.1</version>
     </dependency>
     <dependency>
       <groupId>commons-lang</groupId>
@@ -38,33 +37,6 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-support</artifactId>
-      <version>1.2.7</version>
-      <exclusions>
-        <exclusion>
-          <artifactId>ehcache</artifactId>
-          <groupId>ehcache</groupId>
-        </exclusion>
-        <exclusion>
-          <artifactId>quartz</artifactId>
-          <groupId>quartz</groupId>
-        </exclusion>
-        <exclusion>
-          <artifactId>connector</artifactId>
-          <groupId>javax.resource</groupId>
-        </exclusion>
-        <exclusion>
-          <artifactId>commons-dbcp</artifactId>
-          <groupId>commons-dbcp</groupId>
-        </exclusion>
-        <exclusion>
-          <artifactId>cos</artifactId>
-          <groupId>com.servlets</groupId>
-        </exclusion>
-        <exclusion>
-          <artifactId>org.springframework</artifactId>
-          <groupId>spring-jdbc</groupId>
-        </exclusion>
-      </exclusions>
     </dependency>
     <dependency>
       <groupId>javax.mail</groupId>
