s/commons-spring/spring para estar en tono con el resto

--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
   </repositories>
   <modules>
      <module>commons</module>
-     <module>commons-spring</module>
+     <module>spring</module>
      <module>auth</module>
      <module>message</module>
      <module>dao</module>
