--- a/pom.xml
+++ b/pom.xml
@@ -100,7 +100,22 @@
      </dependency>
      <dependency>
         <groupId>org.springframework</groupId>
+        <artifactId>spring-core</artifactId>
+        <version>${spring.version}</version>
+     </dependency>
+     <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-remoting</artifactId>
+        <version>${spring.version}</version>
+     </dependency>
+     <dependency>
+        <groupId>org.springframework</groupId>
         <artifactId>spring-aop</artifactId>
+        <version>${spring.version}</version>
+     </dependency>
+     <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-support</artifactId>
         <version>${spring.version}</version>
      </dependency>
      <dependency>
