--- a/pom.xml
+++ b/pom.xml
@@ -58,27 +58,27 @@
       <dependency>
         <groupId>ar.com.zauber.commons.auth</groupId>
         <artifactId>commons-auth-api</artifactId>
-        <version>1.1</version>
+        <version>${pom.version}</version>
      </dependency>
      <dependency>
         <groupId>ar.com.zauber.commons</groupId>
         <artifactId>commons</artifactId>
-        <version>1.7</version>
+        <version>${pom.version}</version>
      </dependency>
       <dependency>
         <groupId>ar.com.zauber.commons</groupId>
         <artifactId>commons-dao</artifactId>
-        <version>1.1</version>
+        <version>${pom.version}</version>
      </dependency>
      <dependency>
         <groupId>ar.com.zauber.commons.image</groupId>
         <artifactId>commons-image-api</artifactId>
-        <version>1.1</version>
+        <version>${pom.version}</version>
      </dependency>
      <dependency>
         <groupId>ar.com.zauber.commons.message</groupId>
         <artifactId>commons-message-api</artifactId>
-        <version>1.1</version>
+        <version>${pom.version}</version>
      </dependency>
  
      <!-- spring -->
