--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,11 @@
      </dependency>
      <dependency>
         <groupId>org.springframework</groupId>
+        <artifactId>spring-beans</artifactId>
+        <version>${spring.version}</version>
+     </dependency>
+     <dependency>
+        <groupId>org.springframework</groupId>
         <artifactId>spring-webmvc</artifactId>
         <version>${spring.version}</version>
      </dependency>
@@ -125,10 +130,6 @@
         <exclusions>
           <exclusion>
             <groupId>org.springframework</groupId>
-            <artifactId>spring-beans</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId>org.springframework</groupId>
             <artifactId>spring-support</artifactId>
           </exclusion>
         </exclusions>
@@ -149,10 +150,6 @@
           <exclusion>
             <artifactId>cos</artifactId>
             <groupId>com.servlets</groupId>
-          </exclusion>
-          <exclusion>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-beans</artifactId>
           </exclusion>
           <exclusion>
             <groupId>org.springframework</groupId>
