--- a/auth/impl/pom.xml
+++ b/auth/impl/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>parent</artifactId>
     <groupId>ar.com.zauber.commons.auth</groupId>
-    <version>2.0</version>
+    <version>2.1-SNAPSHOT</version>
   </parent>
   <name>Zauber::Commons::Auth::Implementation</name>
   <artifactId>commons-auth-impl</artifactId>
