--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
      <module>dao</module>
      <module>image</module>
      <module>syndication</module>
+     <module>fts</module>
   </modules>
   <dependencies>
     <dependency>
@@ -52,7 +53,7 @@
    </plugins>
   </build>
   <properties>
-      <spring.version>2.0.1</spring.version>
+      <spring.version>2.0.2</spring.version>
   </properties>
   <dependencyManagement>
     <dependencies>
