--- a/message/pom.xml
+++ b/message/pom.xml
@@ -4,7 +4,7 @@
   <parent>
      <artifactId>zauber-commons-parent</artifactId>
      <groupId>ar.com.zauber.commons</groupId>
-     <version>2.2-SNAPSHOT</version>
+     <version>2.2</version>
   </parent>
   <name>Zauber::Commons::Message</name>
   <groupId>ar.com.zauber.commons.message</groupId>
