--- a/image/pom.xml
+++ b/image/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>zauber-commons-parent</artifactId>
     <groupId>ar.com.zauber.commons</groupId>
-    <version>2.3-SNAPSHOT</version>
+    <version>2.2</version>
   </parent>
   <name>Zauber::Commons::Image</name>
   <artifactId>parent</artifactId>
