--- a/pom.xml
+++ b/pom.xml
@@ -9,13 +9,13 @@
   <name>Zauber::Commons</name>
   <groupId>ar.com.zauber.commons</groupId>
   <artifactId>zauber-commons-parent</artifactId>
-  <version>2.3-SNAPSHOT</version>
+  <version>2.2</version>
   <packaging>pom</packaging>
   <repositories>
     <repository>
       <id>zauber-private-repo</id>
       <name>private zauber repository</name>
-      <url>https://intra.zauber.com.ar/m2</url>
+      <url>https://repo1.zauber.com.ar/default</url>
      </repository>
   </repositories>
   <modules>
