Ahora hace los test con hsqldb

--- a/repository/impl/spring-hbm/pom.xml
+++ b/repository/impl/spring-hbm/pom.xml
@@ -59,9 +59,9 @@
 	  <scope>test</scope>      
     </dependency>
     <dependency>
-      <groupId>postgresql</groupId>
-      <artifactId>postgresql</artifactId>
-      <version>8.1-407.jdbc3</version>
+      <groupId>hsqldb</groupId>
+      <artifactId>hsqldb</artifactId>
+      <version>1.8.0.7</version>
 	  <scope>test</scope>      
     </dependency>        
   </dependencies>
