--- a/repository/impl/spring-hbm/src/test/resources/ar/com/zauber/commons/repository/config/repository-impl-springhbm.properties
+++ b/repository/impl/spring-hbm/src/test/resources/ar/com/zauber/commons/repository/config/repository-impl-springhbm.properties
@@ -1,13 +1,13 @@
 # Database
-dataSource.url=${repository-impl-springhbm.dataSource.url}
-dataSource.driverClassName=${repository-impl-springhbm.dataSource.driverClassName}
-dataSource.username=${repository-impl-springhbm.dataSource.username}
-dataSource.password=${repository-impl-springhbm.dataSource.password}
+dataSource.url=jdbc:hsqldb:mem:aname
+dataSource.driverClassName=org.hsqldb.jdbcDriver
+dataSource.username=sa
+dataSource.password=
 
 # Hibernate
-hibernate.dialect=${repository-impl-springhbm.hibernate.dialect}
-hibernate.hbm2ddl.auto=${repository-impl-springhbm.hibernate.hbm2ddl.auto}
-hibernate.show_sql=${repository-impl-springhbm.hibernate.show_sql}
+hibernate.dialect=org.hibernate.dialect.HSQLDialect
+hibernate.hbm2ddl.auto=create
+hibernate.show_sql=true
 
 # Drop Definition
-dropDefinition.testMarkerTableName=${repository-impl-springhbm.dropDefinition.testMarkerTableName}
+# dropDefinition.testMarkerTableName=${repository-impl-springhbm.dropDefinition.testMarkerTableName}
