--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <name>Zauber::Commons</name>
   <groupId>ar.com.zauber.commons</groupId>
   <artifactId>zauber-commons-parent</artifactId>
-  <version>2.4</version>
+  <version>2.5-SNAPSHOT</version>
   <packaging>pom</packaging>
   <repositories>
     <repository>
@@ -162,11 +162,4 @@
      </dependency>
     </dependencies>
   </dependencyManagement>
-  <distributionManagement>
-     <repository>
-     <id>internal.repo</id>
-     <name>MyCo Internal Repository</name>
-     <url>file:///tmp/commons</url>
-     </repository>
-  </distributionManagement>
 </project>
