--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>zauber-commons-parent</artifactId>
     <groupId>ar.com.zauber.commons</groupId>
-    <version>2.6-SNAPSHOT</version>
+    <version>2.6</version>
   </parent>
   <name>Zauber::Commons::Lang Common</name>
   <artifactId>commons</artifactId>
