--- a/auth/api/pom.xml
+++ b/auth/api/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>parent</artifactId>
     <groupId>ar.com.zauber.commons.auth</groupId>
-    <version>2.6</version>
+    <version>2.7-SNAPSHOT</version>
   </parent>
   <artifactId>commons-auth-api</artifactId>
   <packaging>jar</packaging>
