--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -4,7 +4,7 @@
   <parent>
      <artifactId>zauber-commons-parent</artifactId>
      <groupId>ar.com.zauber.commons</groupId>
-     <version>2.6</version>
+     <version>2.7-SNAPSHOT</version>
   </parent>
   <groupId>ar.com.zauber.commons</groupId>
   <artifactId>commons-dao</artifactId>
