--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <name>Zauber::Commons</name>
   <groupId>ar.com.zauber.commons</groupId>
   <artifactId>zauber-commons-parent</artifactId>
-  <version>2.6</version>
+  <version>2.7-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <scm>
@@ -225,4 +225,12 @@
       </plugin>
     </plugins>
   </reporting>
+  <distributionManagement>
+    <repository>
+       <id>zauber-private-repo</id>
+	   <name>private zauber repository</name>
+	   <url>file:///tmp/1234</url>
+	   <layout>default</layout>
+    </repository>
+  </distributionManagement>
 </project>
