Nueva version del reporitory

--- a/repository/impl/spring-hbm/src/test/resources/ar/com/zauber/commons/repository/config/repository-impl-springhbm.properties
+++ b/repository/impl/spring-hbm/src/test/resources/ar/com/zauber/commons/repository/config/repository-impl-springhbm.properties
@@ -1,13 +1,24 @@
 # Database
-dataSource.url=jdbc:hsqldb:mem:aname
-dataSource.driverClassName=org.hsqldb.jdbcDriver
-dataSource.username=sa
-dataSource.password=
+dataSource.url=jdbc:postgresql:repository_springhbm_impl
+dataSource.driverClassName=org.postgresql.Driver
+dataSource.username=admin
+dataSource.password=admin
 
 # Hibernate
-hibernate.dialect=org.hibernate.dialect.HSQLDialect
+hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 hibernate.hbm2ddl.auto=create
 hibernate.show_sql=true
+hibernate.default_schema=public
 
-# Drop Definition
-# dropDefinition.testMarkerTableName=${repository-impl-springhbm.dropDefinition.testMarkerTableName}
+
+# Database
+# dataSource.url=jdbc:hsqldb:mem:aname
+# dataSource.driverClassName=org.hsqldb.jdbcDriver
+# dataSource.username=sa
+# dataSource.password=
+
+# Hibernate
+# hibernate.dialect=org.hibernate.dialect.HSQLDialect
+# hibernate.hbm2ddl.auto=create
+# hibernate.show_sql=true
+# hibernate.default_schema=public
