--- a/repository/impl/spring-hbm/pom.xml
+++ b/repository/impl/spring-hbm/pom.xml
@@ -55,6 +55,11 @@
       <groupId>commons-beanutils</groupId>
       <artifactId>commons-beanutils</artifactId>
       <version>1.7.0</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-collections</groupId>
+      <artifactId>commons-collections</artifactId>
+      <version>3.2</version>
     </dependency>       
     <dependency>
       <groupId>commons-dbcp</groupId>
@@ -72,6 +77,12 @@
       <groupId>hsqldb</groupId>
       <artifactId>hsqldb</artifactId>
       <version>1.8.0.7</version>
+	  <scope>test</scope>      
+    </dependency>        
+    <dependency>
+      <groupId>postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>8.2-504.jdbc4</version>
 	  <scope>test</scope>      
     </dependency>        
   </dependencies>
@@ -104,14 +115,14 @@
         <filtering>true</filtering>
         <includes>
           <include>log4j.properties</include>        
-          <include>ar/com/zauber/commons/repository/config/repository-impl-springhbm.properties</include>
+          <include>ar/com/zauber/commons/repository/config/**</include>
 	    </includes>
       </testResource>
       <testResource>
         <directory>src/test/resources</directory>
         <excludes>
-          <exclude>log4j.properties</exclude>
-          <exclude>ar/com/zauber/commons/repository/config/repository-impl-springhbm.properties</exclude>          
+          <exclude>log4j.properties</exclude>          
+          <exclude>ar/com/zauber/commons/repository/config/**</exclude>
         </excludes>
       </testResource>
     </testResources>
