intento de mejorar la configuracion

--- a/repository/impl/spring-hbm/src/test/resources/ar/com/zauber/commons/repository/config/repository-impl-springhbm.properties
+++ b/repository/impl/spring-hbm/src/test/resources/ar/com/zauber/commons/repository/config/repository-impl-springhbm.properties
@@ -1,24 +1,11 @@
-# Database
-dataSource.url=jdbc:postgresql:repository_springhbm_impl
-dataSource.driverClassName=org.postgresql.Driver
-dataSource.username=admin
-dataSource.password=admin
+# STO Database
+dataSource.url=${repository-impl-springhbm.dataSource.url}
+dataSource.driverClassName=${repository-impl-springhbm.dataSource.driverClassName}
+dataSource.username=${repository-impl-springhbm.dataSource.username}
+dataSource.password=${repository-impl-springhbm.dataSource.password}
 
 # Hibernate
-hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-hibernate.hbm2ddl.auto=create
-hibernate.show_sql=true
-hibernate.default_schema=public
-
-
-# Database
-# dataSource.url=jdbc:hsqldb:mem:aname
-# dataSource.driverClassName=org.hsqldb.jdbcDriver
-# dataSource.username=sa
-# dataSource.password=
-
-# Hibernate
-# hibernate.dialect=org.hibernate.dialect.HSQLDialect
-# hibernate.hbm2ddl.auto=create
-# hibernate.show_sql=true
-# hibernate.default_schema=public
+hibernate.dialect=${repository-impl-springhbm.hibernate.dialect}
+hibernate.hbm2ddl.auto=${repository-impl-springhbm.hibernate.hbm2ddl.auto}
+hibernate.show_sql=${repository-impl-springhbm.hibernate.show_sql}
+hibernate.default_schema=${repository-impl-springhbm.hibernate.default_schema}
