nuevo proyecto commons-doxia

--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
      <module>fts</module>
      <module>repository</module>
      <module>gis</module>
+     <module>doxia</module>
   </modules>
   <dependencies>
     <dependency>
