martin@sally:~/zauber/sandbox/zaubercommons$ cat svn-commit.tmp Renombrado de algunos parents que no eran demasiado explicativos

--- a/pom.xml
+++ b/pom.xml
@@ -236,5 +236,7 @@
 	   <url>file:///tmp/1234</url>
 	   <layout>default</layout>
     </repository>
+    <site>
+    </site>
   </distributionManagement>
 </project>
