Cambio en la version por argumento para hacer mvn:release

--- a/repository/impl/pom.xml
+++ b/repository/impl/pom.xml
@@ -17,7 +17,7 @@
     <dependency>
       <artifactId>commons-repository-api</artifactId>
       <groupId>ar.com.zauber.commons.repository</groupId>
-      <version>${pom.version}</version>
+      <version>2.10-SNAPSHOT</version>
     </dependency>
   </dependencies>
 </project>
